@@ -173,6 +173,93 @@ class ModelSQLTestCase(unittest.TestCase):
         delete_ids.assert_called_with(
             'test.modelsql.translation', 'model', [record.id])
 
+    @with_transaction()
+    def test_constraint_check(self):
+        "Test check constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.check')
+
+        record, = Model.create([{'value': 50}])
+
+        self.assertTrue(record.id)
+
+    @with_transaction()
+    def test_constraint_check_null(self):
+        "Test check constraint with null"
+        pool = Pool()
+        Model = pool.get('test.modelsql.check')
+
+        record, = Model.create([{'value': None}])
+
+        self.assertTrue(record.id)
+
+    @with_transaction()
+    def test_constraint_check_invalid(self):
+        "Test invalid check constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.check')
+
+        with self.assertRaises(UserError):
+            Model.create([{'value': 10}])
+
+    @with_transaction()
+    def test_constraint_unique(self):
+        "Test unique constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.unique')
+
+        records = Model.create([{'value': 1}, {'value': 2}])
+
+        self.assertEqual(len(records), 2)
+
+    @with_transaction()
+    def test_constraint_unique_null(self):
+        "Test unique constraint with null"
+        pool = Pool()
+        Model = pool.get('test.modelsql.unique')
+
+        records = Model.create([{'value': None}, {'value': None}])
+
+        self.assertEqual(len(records), 2)
+
+    @with_transaction()
+    def test_constraint_unique_invalid(self):
+        "Test invalid unique constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.unique')
+
+        with self.assertRaises(UserError):
+            Model.create([{'value': 42}, {'value': 42}])
+
+    @with_transaction()
+    def test_constraint_exclude(self):
+        "Test exclude constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.exclude')
+
+        records = Model.create([{'value': 1}, {'value': 2}])
+
+        self.assertEqual(len(records), 2)
+
+    @with_transaction()
+    def test_constraint_exclude_exclusion(self):
+        "Test exclude constraint exclusion"
+        pool = Pool()
+        Model = pool.get('test.modelsql.exclude')
+
+        records = Model.create([{'value': -1}, {'value': -1}])
+
+        self.assertEqual(len(records), 2)
+
+    @with_transaction()
+    def test_constraint_exclude_invalid(self):
+        "Test invalid exclude constraint"
+        pool = Pool()
+        Model = pool.get('test.modelsql.exclude')
+
+        with self.assertRaises(UserError):
+            Model.create([{'value': 42}, {'value': 42}])
+
 
 def suite():
     return unittest.TestLoader().loadTestsFromTestCase(ModelSQLTestCase)
